# friendly-first-run

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json
backend/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
backend/alembic/: env.py
backend/alembic/versions/: 20260503_0001_rfc002_strict_erd.py  20260503_0002_rfc005_add_disapproved_approval_state.py  20260503_0003_compat_missing_revision.py  20260509_0003_add_btcusdt_kline_updated_at.py  (+4 more)
backend/app/: __init__.py  config.py  responses.py  routes.py
backend/app/scripts/: __init__.py  (+5 more)
backend/tests/: test_access_control_service.py  test_architecture_factory.py  test_authentication_controller.py  test_blueprint_approval_controller.py  test_blueprint_controller.py  test_blueprint_validator.py  test_blueprints_library_controller.py  test_csrf_hardening.py  test_custom_indicators.py  test_default_experiment_executor.py  test_documentation_controller.py  test_experiment_compiler.py  test_experiment_controller.py  test_experiment_log_repository_metrics.py  test_experiment_validator.py  test_experiment_worker.py  test_fyp_integration_journey.py  test_job_cancellation_strategy.py  test_job_controller.py  test_logs_download_rfc011.py  test_market_data_controller.py  test_market_data_scripts.py  test_market_data_service.py  test_metrics_and_logs.py  test_model_controller.py  test_public_hub_controller.py  test_session_service.py  test_system_controller.py  test_talib_indicator_strategy.py  test_target_strategy_factory.py  test_user_controller.py  test_versioning_service.py
(+571 files in other folders)
