[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bee-backend"
version = "0.1.0"
description = "Flask backend for the Bitcoin Experimental Engine"
readme = "../README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "Flask==3.1.3",
  "Flask-Login==0.6.3",
  "Flask-WTF==1.2.2",
  "SQLAlchemy==2.0.45",
  "Alembic==1.17.2",
  "python-dotenv==1.2.1",
  "Werkzeug==3.1.8",
  "pandas==3.0.2",
  "polars==1.30.0",
  "numpy==2.3.5",
  "scikit-learn==1.8.0",
  "binance-connector==3.12.0",
  "redis==7.1.0",
  "rq==2.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100